# economic-data

./: .dockerignore  .gitignore  Dockerfile  Pipfile  README.md  compose.yaml  pyproject.toml  requirements.txt  setup.cfg  setup.py
.github/workflows/: linter.yml
exchange_rate_scraper/: __init__.py  constants.py  exchange_rate_scraper.py  main.py
snb_exchange_rate_scraper/: constants.py  exchange_rate_scraper.py
