[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[project]
name = "exchange-rate-scraper"
authors = [
    {name = "Luca Mircea", email = "lucamircea10@gmail.com"},
]
description = "Python script for scraping exchange rates from central bank websites"
readme = "README.md"
requires-python = ">=3.11"
license = {text = "BSD-3-Clause"}
classifiers = [
    "Programming Language :: Python :: 3",
]

dependencies = [
    "beautifulsoup4==4.12.2",
    "black==23.9.1",
    "boto3==1.28.57",
    "build==1.0.3",
    "isort==5.12.0",
    "pandas==2.1.1",
    "parsel==1.8.1",
    "pip-chill==1.0.3",
    "pysocks==1.7.1",
    "ruff==0.0.291"
]
dynamic = ["version"]

[project.scripts]
get-forex-data = "exchange_rate_scraper:main"
